Closed Bug 363446 Opened 19 years ago Closed 19 years ago

EmbedPrivate::ScrollToSelectedNode doesn't initialize rv if !aDOMNode

Categories

(Core Graveyard :: Embedding: GTK Widget, defect)

x86
SunOS
defect
Not set
trivial

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: timeless, Assigned: sciguyryan)

References

Details

Attachments

(1 obsolete file)

Anyway, I'm using an auditing app that I expect never to use again, so I'm making a couple of notes.
Attached patch Patch v1 (obsolete) — Splinter Review
Patch v1 * Simply initialize rv too NS_ERROR_FAILURE. If !aDOMNode then there is no chance of success. Not sure how much of an effect this is going to have as the only use of this method checks the aDOMNode parameter before passing it.
Assignee: nobody → sciguyryan+bugzilla
Status: NEW → ASSIGNED
Attachment #248271 - Flags: review?(timeless)
Attachment #248271 - Flags: review?(timeless) → review+
Checked in my timeless, marking as RESOLVED FIXED.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Comment on attachment 248271 [details] [diff] [review] Patch v1 mozilla/embedding/browser/gtk/src/EmbedPrivate.cpp 1.74
Attachment #248271 - Attachment is obsolete: true
QA Contact: xre.startup → gtk-widget
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: