Bug 363446 EmbedPrivate::ScrollToSelectedNode doesn't initialize rv if !aDOMNode patch by sciguyryan+bugzilla@gmail.com r=timeless